--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,15 @@ langchain_groq
 langchain_core
 langchain_community
 pypdf
-chromadb
 sentence_transformers
-gradio
-streamlit
+chromadb==0.6.3
+langchain==0.0.330
+streamlit==1.31.0
+pydantic==1.10.9
+fastapi==0.110.0
+uvicorn==0.27.0
+tqdm==4.66.1
+httpx==0.26.0
+numpy==1.24.0
+orjson==3.9.7
+
