--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pydantic==1.10.9
 fastapi==0.110.0
 uvicorn==0.27.0
 tqdm==4.66.1
-httpx==0.26.0
+httpx>=0.27.0
 numpy==1.24.0
 orjson==3.9.7
 torch==2.0.0
