--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ uvicorn==0.27.0
 tqdm==4.66.1
 httpx>=0.27.0
 numpy==1.24.0
-orjson==3.9.7
+orjson>=3.9.12
 torch==2.0.0
 torchaudio==2.0.0
 torchvision==0.15.0
