--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ fastapi==0.110.0
 uvicorn==0.27.0
 tqdm==4.66.1
 httpx>=0.27.0
-numpy==1.24.0
+numpy>=1.24.0
 orjson>=3.9.12
 torch==2.0.0
 torchaudio==2.0.0
