--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chromadb==0.6.3
 langchain==0.1.7
 streamlit==1.31.0
 pydantic==2.6.4
+langsmith==0.0.78
 fastapi==0.110.0
 uvicorn==0.27.0
 tqdm==4.66.1
